--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -17,16 +17,16 @@
           </li>
         {% endif %}
         <li class="navigation__item">
-          <a href="/" class="navigation__link">Docs</a>
+          <a href="/" class="navigation__link  {% active_menu docs %}">Docs</a>
         </li>
         <li class="navigation__item">
           <a href="/blog/" class="navigation__link  {% active_menu blog %}">Blog</a>
         </li>
         <li class="navigation__item">
-          <a href="/devjobs/" class="navigation__link">Jobs</a>
+          <a href="/devjobs/" class="navigation__link  {% active_menu devjobs %}">Jobs</a>
         </li>
         <li class="navigation__item">
-          <a href="/about/" class="navigation__link">About</a>
+          <a href="/about/" class="navigation__link  {% active_menu about %}">About</a>
         </li>
       </ul>
     </nav>
