--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -4,6 +4,7 @@ $dev-green:                               #28b464
 $dev-blue:                                #418cd2
 $beyond-blue:                             #1C3646
 $beyond-green:                            #4EB7A8
+$beyond-beige:                            #efeee5
 
 $gray-dark:                               #2c2926
 $gray-mid:                                #4a4a4a
