--- a/_sass/2-components/_content.sass
+++ b/_sass/2-components/_content.sass
@@ -27,4 +27,4 @@ html
         min-height: 100vh
         display: flex
         flex-direction: column
-        justify-content: space-between
+        justify-content: center
