--- a/_sass/3-pages/_error-404.sass
+++ b/_sass/3-pages/_error-404.sass
@@ -1,14 +1,16 @@
-.main
-  background-image: url(/assets/img/blog/pages/404.jpg)
+.blank
 
-  .status
-    padding-top: 6rem
-    text-align: center
-    color: $white
+  .main
 
-    &__title
-      font-size: 12rem
-      line-height: 1
+    .status
+      margin-top: 6rem
+      margin-bottom: 6rem
+      text-align: center
+      color: $white
 
-    &__subtitle
-      font-size: 3rem
+      &__title
+        font-size: 12rem
+        line-height: 1
+
+      &__subtitle
+        font-size: 3rem
