--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -4,7 +4,7 @@
   {% include head.html %}
   <body class="blank">
     {% include sections/navbar.html %}
-    <main class="main">
+    <main class="main" style="background-image: url(/assets/img/pages/{{ page.background_image }})">
       <div class="content-wrapper">
         {{ content }}
       </div>
