Change body class from post to page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 
 <html>
   {% include head.html %}
-  <body class="post">
+  <body class="page">
     {% include sections/navbar.html %}
     {% include sections/header.html %}
     <main>
