Fix list item styles

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -31,6 +31,11 @@
 
           margin-bottom: $card-margin-desktop
 
+    ul
+      li
+        margin-left: 1em
+        list-style-type: disc
+
     div:not(.custom-image) img:not(.icon-share)
       margin: 2rem 0
       margin-left: -$card-margin-mobile
