Adjust link size

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -97,12 +97,12 @@
           transition: $base-transition
 
     .custom-image
-      margin-bottom: $card-margin-desktop
-      margin: 0 auto
+      margin: 0 auto $card-margin-desktop
 
       a
         width: 100%
         pointer-events: none
+        display: grid
 
       &--circle
         .custom-image__image
