--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -14,6 +14,7 @@ $white:                                   #ffffff
 
 $base-font-family:                        'ProximaNova-Regular', sans-serif
 $display-font-family:                     'HelveticaNeue-Bold', sans-serif
+$display-font-family-light:               'HelveticaNeue-Light', sans-serif
 $code-font-family:                        'Roboto Mono', monospace
 
 $base-font-color:                         $gray-dark
