Add devjobs page

--- a/_sass/2-components/_content.sass
+++ b/_sass/2-components/_content.sass
@@ -27,4 +27,8 @@ html
         min-height: 100vh
         display: flex
         flex-direction: column
-        justify-content: center
+        justify-content: space-around
+
+  .devjobs
+    background: $gray-dark
+    color: $white
