--- a/_sass/2-components/_footer.sass
+++ b/_sass/2-components/_footer.sass
@@ -3,10 +3,11 @@
   background-size: cover
   background-position: center center
   display: flex
-  height: 600px
-
-  +grid-media($grid-medium)
-    height: 500px
+  padding: 6rem 0
+  // height: 600px
+  //
+  // +grid-media($grid-medium)
+  //   height: 500px
 
   &-wrapper
     width: 90%
@@ -92,3 +93,11 @@
     width: 100%
     display: flex
     align-items: center
+
+.devjobs
+
+  .footer
+    background: $gray-dark
+    background-image: url(/assets/img/pages/jobs/footer-devjobs.jpg)
+    background-size: cover
+    background-position:  center
