--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -44,3 +44,21 @@
         &:hover,
         &:focus
           text-decoration: underline
+
+.devjobs
+
+  .header
+    height: 600px
+
+    .header-wrapper
+      flex-direction: column
+
+      h1
+        text-transform: uppercase
+
+        span
+          position: relative
+          bottom: 3px
+
+      p
+        font-size: 3rem
