--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -6,9 +6,7 @@
       +grid-container
       +grid-collapse
       color: $white
-      margin-top: 6rem
-      margin-bottom: 6rem
-      display: flex
+      padding: 4rem 0
 
       .tile
         +grid-column(12)
