--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,12 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i">
 
+  {% if page.layout == 'devjobs' %}
+
+    <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+
+  {% endif %}
+
   <link rel="stylesheet" href="/assets/css/main.css" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
