--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,4 +1,4 @@
-{% if page.header_image %}
+{% unless page.header_image.blank? %}
 
   <header class="header" style="background-image: url(/assets/img/pages/blog/headers/{% post_header page.header_image %}); background-position: center {{ page.header_position }}">
     <div class="header-wrapper">
@@ -7,6 +7,11 @@
 
         <h2>{{ page.title }}</h2>
         <p>{{ page.authors | join: ', ' }} — {{ page.date | date: "%B %d, %Y" }} — <a href="/blog/category/{{ page.category }}">{{ page.category }}</a></p>
+
+      {% elsif page.layout == 'devjobs' %}
+
+        <h1>{{ page.h1 }}</h1>
+        <p>{{ page.h2 }}</p>
 
       {% else %}
 
@@ -17,4 +22,4 @@
     </div>
   </header>
 
-{% endif %}
+{% endunless %}
