--- a/_sass/3-pages/_error-404.sass
+++ b/_sass/3-pages/_error-404.sass
@@ -3,10 +3,9 @@
   .main
 
     .status
-      margin-top: 6rem
-      margin-bottom: 6rem
       text-align: center
       color: $white
+      padding: 4rem 0
 
       &__title
         font-size: 12rem
