Make navbar entries fully clickable

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -165,8 +165,8 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
           margin-right: $card-margin-mobile
 
           +grid-media($grid-medium)
-            margin-left: 0
-            margin-right: 0
+            margin-left: $card-margin-desktop
+            margin-right: $card-margin-desktop
 
       &--left
         float: left
