Add progress bar to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
   {% include head.html %}
   <body class="post">
     {% include sections/navbar.html %}
+    {% include components/progressbar.html %}
     {% include sections/header.html %}
     <main>
       <div class="content-wrapper">
@@ -17,6 +18,7 @@
     {% include sections/footer.html %}
     <script src="/assets/js/lightbox.min.js"></script>
     <script src="/assets/js/posts.js"></script>
+    <script src="/assets/js/progressbar.js"></script>
     <link rel="stylesheet" href="/assets/css/lightbox.css" />
   </body>
 </html>
