--- a/_sass/2-components/_content.sass
+++ b/_sass/2-components/_content.sass
@@ -4,11 +4,15 @@ html
   .content-wrapper
     width: 95%
     max-width: 1200px
-    margin: 3rem auto
+    margin-left: auto
+    margin-right: auto
+    margin-top: 3rem
+    margin-bottom: 3rem
 
     +grid-media($grid-medium)
       width: 90%
-      margin: 6rem auto
+      margin-top: 6rem
+      margin-bottom: 6rem
 
   .blank
     min-height: 100vh
