--- a/_includes/components/post-card.html
+++ b/_includes/components/post-card.html
@@ -1,12 +1,12 @@
-<div class="card  card--post">
+<a href="{{ include.url }}" class="card  card--post">
   <div class="card--post__header" style="background-image: url(/assets/img/pages/blog/headers/{% post_header include.header_image %}); background-position: center {{ include.header_position }}">
-    <a href="/blog/category/{{ include.category }}" class="card--post__category">{{ include.category | category_name }}</a>
+    <span class="card--post__category">{{ include.category | category_name }}</span>
   </div>
-  <a href="{{ include.url }}" class="card--post__body">
+  <div class="card--post__body">
     <h3 class="card--post__title">{{ include.title }}</h3>
     <div class="card--post__footer">
       <p class="card--post__author">{{ include.authors | join: ", "}}</p>
       <p class="card--post__date">{{ include.date | date: "%b %d, %Y" }}</p>
     </div>
-  </a>
-</div>
+  </div>
+</a>
