Update pagination type

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -63,3 +63,5 @@ $header-height:                           400px
 // Pagination
 $pagination-disabled-bg:                  #e1e1e1
 $pagination-disabled-color:               $base-font-color-light
+$pagination-selected-bg:                  $beyond-green
+$pagination-selected-color:               $white
