--- a/_sass/2-components/_pagination.sass
+++ b/_sass/2-components/_pagination.sass
@@ -12,6 +12,12 @@
       transition: $base-transition
       color: $base-font-color
 
+    &--selected
+      background: $pagination-selected-bg
+      color: $pagination-selected-color
+      cursor: default
+      pointer-events: none
+
     &--disabled
       background-color: $pagination-disabled-bg
       color:  $pagination-disabled-color
