Update pagination margin

--- a/_sass/2-components/_pagination.sass
+++ b/_sass/2-components/_pagination.sass
@@ -1,11 +1,12 @@
 .pagination
   width: 100%
   display: flex
-  justify-content: space-between
+  justify-content: center
 
   &__item
     color: $base-font-color
     padding: .5em 1em
+    margin: 0 1.6rem
 
     &:not(&--disabled):hover
       box-shadow: $hover-box-shadow
