--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar  navbar--transparent">
+<div class="navbar  {% if page.layout == 'no-header' %}navbar--dark{% else %}navbar--transparent{% endif %}">
   <div class="navbar-wrapper">
 
     <a href="/">
@@ -43,4 +43,6 @@
 {% if url[1] == 'blog' %}
   <script src="/assets/js/navbar-search.js"></script>
 {% endif %}
-<script src="/assets/js/navbar.js"></script>
+{% unless page.layout == 'no-header' %}
+  <script src="/assets/js/navbar.js"></script>
+{% endunless %}
