--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,7 +7,22 @@
     {% include sections/header.html %}
     <main>
       <div class="content-wrapper">
-        {% include components/pagination.html %}
+
+        <div class="columns">
+
+          <div class="post-container">
+            {% include components/pagination.html %}
+          </div>
+
+          <div class="sidebar  card">
+            <ul>
+              {% for category in site.category_list %}
+                <li><a href="/blog/{{ category[0] }}/">{{ category[1] }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+
+        </div>
       </div>
     </main>
     {% include sections/footer.html %}
