--- a/_sass/3-pages/_blog.sass
+++ b/_sass/3-pages/_blog.sass
@@ -1,18 +1,29 @@
-.post-container
-  +grid-collapse
-  +grid-container
-  margin-top: 4rem
+.columns
+  display: flex
+  align-items: flex-start
 
-  +grid-media($grid-medium)
-    margin-top: 6rem
-    display: flex
-    align-items: stretch
-    flex-direction: row
-    flex-wrap: wrap
+  .sidebar
+    width: 30%
+    padding: 2rem
+    box-sizing: border-box
 
-  .card--post
-    +grid-column(12)
-    margin-bottom: 4rem
+  .post-container
+    width: 70%
+    padding-right: 4rem
+    +grid-collapse
+    +grid-container
+    // margin-top: 4rem
 
     +grid-media($grid-medium)
-      +grid-column(6)
+      // margin-top: 6rem
+      display: flex
+      align-items: stretch
+      flex-direction: row
+      flex-wrap: wrap
+
+    .card--post
+      +grid-column(12)
+      margin-bottom: 4rem
+
+      +grid-media($grid-medium)
+        +grid-column(6)
