--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -31,11 +31,11 @@
           <li class="navigation__item">
             <a href="{{ site.url }}/api" class="navigation__link">Docs</a>
           </li>
-          <li class="navigation__item  navigation__item--spacer">&amp;&amp;</li>
+          <li class="navigation__item  navigation__item--spacer">&middot;</li>
           <li class="navigation__item">
             <a href="{{ site.url }}/blog" class="navigation__link">Blog</a>
           </li>
-          <li class="navigation__item  navigation__item--spacer">&amp;&amp;</li>
+          <li class="navigation__item  navigation__item--spacer">&middot;</li>
           <li class="navigation__item">
             <a href="{{ site.url }}/devjobs" class="navigation__link">Jobs</a>
           </li>
