--- a/_sass/2-components/_footer.sass
+++ b/_sass/2-components/_footer.sass
@@ -53,7 +53,7 @@
             margin-right: 4rem
 
           &--spacer
-            color: $base-font-color-mid
+            color: $base-font-color-light
             display: none
 
             +grid-media($grid-medium)
