--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -65,3 +65,22 @@ $pagination-disabled-bg:                  #e1e1e1
 $pagination-disabled-color:               $base-font-color-light
 $pagination-selected-bg:                  $beyond-green
 $pagination-selected-color:               $white
+
+// Categories
+$cat-api-experience:                      $beyond-green
+$cat-coding:                              $beyond-green
+$cat-events:                              $beyond-green
+$cat-language-and-localization:           $beyond-green
+$cat-methods-and-tools:                   $beyond-green
+$cat-on-the-job:                          $beyond-green
+$cat-tech-stories:                        $beyond-green
+$cat-techcomm-and-socialmedia:            $beyond-green
+
+$cat-api-experience-hov:                  darken($cat-api-experience, 10%)
+$cat-coding-hov:                          darken($cat-coding, 10%)
+$cat-events-hov:                          darken($cat-events, 10%)
+$cat-language-and-localization-hov:       darken($cat-language-and-localization, 10%)
+$cat-methods-and-tools-hov:               darken($cat-methods-and-tools, 10%)
+$cat-on-the-job-hov:                      darken($cat-on-the-job, 10%)
+$cat-tech-stories-hov:                    darken($cat-tech-stories, 10%)
+$cat-techcomm-and-socialmedia-hov:        darken($cat-techcomm-and-socialmedia, 10%)
