--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -243,7 +243,6 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
       position: absolute
       top: 2rem
       left: -1rem
-      background-color: $card-ribbon-background-color
       color: $white
       line-height: 1
       font-weight: bold
@@ -263,7 +262,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
         height: 0
         border-style: solid
         border-width: 0 1rem 1rem 0
-        border-color: transparent $card-ribbon-background-color-shade transparent transparent
+        // border-color: transparent $card-ribbon-background-color-shade transparent transparent
 
     &__body
       padding: 2rem
