Add category colors

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -67,14 +67,14 @@ $pagination-selected-bg:                  $beyond-green
 $pagination-selected-color:               $white
 
 // Categories
-$cat-api-experience:                      $beyond-green
-$cat-coding:                              $beyond-green
-$cat-events:                              $beyond-green
-$cat-language-and-localization:           $beyond-green
-$cat-methods-and-tools:                   $beyond-green
-$cat-on-the-job:                          $beyond-green
-$cat-tech-stories:                        $beyond-green
-$cat-techcomm-and-socialmedia:            $beyond-green
+$cat-api-experience:                      #4eb7a8
+$cat-coding:                              #ed6637
+$cat-events:                              #7baa51
+$cat-language-and-localization:           #c1b31a
+$cat-methods-and-tools:                   #265868
+$cat-on-the-job:                          #944788
+$cat-tech-stories:                        #a2423c
+$cat-techcomm-and-socialmedia:            #727878
 
 $cat-api-experience-hov:                  darken($cat-api-experience, 10%)
 $cat-coding-hov:                          darken($cat-coding, 10%)
