Remove sidebar and add endless-scroll javascript

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,22 +7,15 @@
     {% include sections/header.html %}
     <main>
       <div class="content-wrapper">
-
-        <div class="columns">
-
-          <div class="post-container">
-            {% include components/pagination.html %}
-          </div>
-
-          <div class="card  sidebar">
-            {% for category in site.category_list %}
-              <a class="category  category--{{ category[0] }}"  href="/blog/{{ category[0] }}/">{{ category[1] }}</a>
-            {% endfor %}
-          </div>
-
+        <div class="post-container" id="posts">
+          {{ content }}
+        </div>
+        <div id="loading" data-next="/api{{ page.permalink }}/page-1.json">
+          <img src="/assets/img/loading.svg" alt="Loading…" />
         </div>
       </div>
     </main>
     {% include sections/footer.html %}
+    <script src="/assets/js/endless-scroll.js"></script>
   </body>
 </html>
