Change header links color

--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -43,6 +43,15 @@
     p
       color: $base-font-color-white
 
+      a
+        color: $base-font-color-white
+        text-decoration: underline
+
+        &:hover,
+        &:focus
+          color: darken($whitesmoke, 15%)
+          transition: $base-transition
+
 .devjobs
 
   .header
