Update category colors

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -67,15 +67,17 @@ $pagination-selected-bg:                  $beyond-green
 $pagination-selected-color:               $white
 
 // Categories
-$cat-api-experience:                      #4eb7a8
-$cat-coding:                              #ed6637
+$cat-all-categories:                      #4eb7a8
+$cat-api-experience:                      #c1b31a
+$cat-coding:                              #265868
 $cat-events:                              #7baa51
-$cat-language-and-localization:           #c1b31a
-$cat-methods-and-tools:                   #265868
+$cat-language-and-localization:           #4c4935
+$cat-methods-and-tools:                   #ed6637
 $cat-on-the-job:                          #944788
 $cat-tech-stories:                        #a2423c
-$cat-techcomm-and-socialmedia:            #727878
+$cat-techcomm-and-socialmedia:            #8e8e8e
 
+$cat-all-categories-hov:                  darken($cat-all-categories, 10%)
 $cat-api-experience-hov:                  darken($cat-api-experience, 10%)
 $cat-coding-hov:                          darken($cat-coding, 10%)
 $cat-events-hov:                          darken($cat-events, 10%)
